# FilmFlood

./: .dockerignore  .gitignore  README.md  docker-compose.yml  nginx.conf
backend-fastapi/: .env  .gitignore  Dockerfile  config.py  main.py  pyproject.toml
backend-fastapi/core/: config.py  schemas.py  settings.py
backend-fastapi/email_send/: code_send_email.py  send_post_request.py
backend-fastapi/routers/: send_email_router.py  send_post_request.py
backend-fastapi/service/: code_send_email.py
backend-fastapi/service/email/: send_email.py
backend-fastapi/service/payeer/: pay_kassa.py
backend-fastapi/templates/: code.html
backend-nestjs/: Dockerfile  package.json
backend-nestjs/prisma/schema/: kinofilm.prisma  schema.prisma  user.prisma
backend-nestjs/src/: app.module.ts  main.ts  redis.service.ts
backend-nestjs/src/auth/: auth.controller.ts  auth.service.ts
backend-nestjs/src/film_res/: film_res.controller.ts  film_res.module.ts  film_res.service.ts
backend-nestjs/src/s3/: s3.controller.ts  s3.service.ts
backend-nestjs/src/user/: user.controller.ts  user.module.ts  user.service.ts
frontend-nextjs/: Dockerfile  next.config.ts  nginx.conf  package.json
frontend-nextjs/src/app/: layout.tsx  not-found.tsx  page.tsx
frontend-nextjs/src/hooks/: use-toast.tsx
frontend-nextjs/src/service/: AuthService.ts  FilmService.ts  UserService.ts  authservice.interface.ts  filmservice.interface.ts
frontend-nextjs/src/stores/: filmData.interface.ts  (+3 more)
nginx/: default.conf  nginx.conf
nginx/ssl/: certificate.crt  certificate.csr  certificate.key
(+67 files in other folders)
